# yc-email-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml  render.yaml
.claude/: settings.local.json
email_me/: main.py  models.py  permutations.py  scraper.py  utils.py  verifier.py  web.py
email_me/templates/: index.html
tests/: test_main.py  test_permutations.py  test_scraper.py  test_web.py
