[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "email-me"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "dnspython>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "pytest-mock>=3.12",
]
web = [
    "flask>=3.0",
]

[project.scripts]
email-me = "email_me.main:cli"
email-me-web = "email_me.web:cli"

[tool.hatch.build.targets.wheel]
packages = ["email_me"]
